@@ -1,3 +1,9 @@
+Wed Sep 12 00:08:54 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>
+
+	* src/org/jcae/mesh/MeshOEMMDecimate.java
+	  src/org/jcae/mesh/MeshOEMMDecimateMoreLeaves.java: Merge
+	MeshOEMMDecimate and MeshOEMMDecimateMoreLeaves, and remove the latter.
+
 Thu Sep  6 11:20:33 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/mesh/amibe/ds/AbstractTriangle.java (copy): Also copy
